Allow setting maxQueueEntries